tests/ui/repr/repr-transparent-other-items.stderr
error: `#[repr]` attribute cannot be used on functions
  --> $DIR/repr-transparent-other-items.rs:3:1
   |
LL | #[repr(transparent)]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: `#[repr]` attribute cannot be used on statics
  --> $DIR/repr-transparent-other-items.rs:6:1
   |
LL | #[repr(transparent)]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: aborting due to 2 previous errors

